Update airbase to 379
This addresses new modernizer violations instead of supressing these