@@ -20,6 +20,8 @@ import io.trino.sql.planner.Symbol;
 import io.trino.sql.planner.iterative.rule.test.BaseRuleTest;
 import org.junit.jupiter.api.Test;
 
+import java.util.List;
+
 import static io.trino.spi.type.BigintType.BIGINT;
 import static io.trino.sql.ir.Booleans.TRUE;
 import static io.trino.sql.ir.Comparison.Operator.LESS_THAN;
@@ -27,7 +29,6 @@ import static io.trino.sql.planner.assertions.PlanMatchPattern.values;
 import static io.trino.sql.planner.plan.JoinType.FULL;
 import static io.trino.sql.planner.plan.JoinType.LEFT;
 import static io.trino.sql.planner.plan.JoinType.RIGHT;
-import static java.util.Collections.emptyList;
 
 public class TestRemoveUnreferencedScalarSubqueries
         extends BaseRuleTest
@@ -39,8 +40,8 @@ public class TestRemoveUnreferencedScalarSubqueries
                 .on(p -> {
                     Symbol b = p.symbol("b");
                     return p.correlatedJoin(
-                            emptyList(),
-                            p.values(emptyList(), ImmutableList.of(emptyList())),
+                            List.of(),
+                            p.values(List.of(), ImmutableList.of(List.of())),
                             p.values(2, b));
                 })
                 .matches(values("b"));
@@ -49,8 +50,8 @@ public class TestRemoveUnreferencedScalarSubqueries
                 .on(p -> {
                     Symbol b = p.symbol("b");
                     return p.correlatedJoin(
-                            emptyList(),
-                            p.values(emptyList(), ImmutableList.of(emptyList())),
+                            List.of(),
+                            p.values(List.of(), ImmutableList.of(List.of())),
                             LEFT,
                             TRUE,
                             p.values(2, b));
@@ -61,8 +62,8 @@ public class TestRemoveUnreferencedScalarSubqueries
                 .on(p -> {
                     Symbol b = p.symbol("b");
                     return p.correlatedJoin(
-                            emptyList(),
-                            p.values(emptyList(), ImmutableList.of(emptyList())),
+                            List.of(),
+                            p.values(List.of(), ImmutableList.of(List.of())),
                             RIGHT,
                             TRUE,
                             p.values(2, b));
@@ -73,8 +74,8 @@ public class TestRemoveUnreferencedScalarSubqueries
                 .on(p -> {
                     Symbol b = p.symbol("b");
                     return p.correlatedJoin(
-                            emptyList(),
-                            p.values(emptyList(), ImmutableList.of(emptyList())),
+                            List.of(),
+                            p.values(List.of(), ImmutableList.of(List.of())),
                             FULL,
                             TRUE,
                             p.values(2, b));
@@ -89,8 +90,8 @@ public class TestRemoveUnreferencedScalarSubqueries
                 .on(p -> {
                     Symbol b = p.symbol("b");
                     return p.correlatedJoin(
-                            emptyList(),
-                            p.values(emptyList(), ImmutableList.of(emptyList())),
+                            List.of(),
+                            p.values(List.of(), ImmutableList.of(List.of())),
                             LEFT,
                             TRUE,
                             p.filter(
@@ -106,8 +107,8 @@ public class TestRemoveUnreferencedScalarSubqueries
                 .on(p -> {
                     Symbol b = p.symbol("b");
                     return p.correlatedJoin(
-                            emptyList(),
-                            p.values(emptyList(), ImmutableList.of(emptyList())),
+                            List.of(),
+                            p.values(List.of(), ImmutableList.of(List.of())),
                             FULL,
                             TRUE,
                             p.filter(
@@ -140,36 +141,36 @@ public class TestRemoveUnreferencedScalarSubqueries
     {
         tester().assertThat(new RemoveUnreferencedScalarSubqueries())
                 .on(p -> p.correlatedJoin(
-                        emptyList(),
+                        List.of(),
                         p.values(p.symbol("b", BIGINT)),
-                        p.values(emptyList(), ImmutableList.of(emptyList()))))
+                        p.values(List.of(), ImmutableList.of(List.of()))))
                 .matches(values("b"));
 
         tester().assertThat(new RemoveUnreferencedScalarSubqueries())
                 .on(p -> p.correlatedJoin(
-                        emptyList(),
+                        List.of(),
                         p.values(p.symbol("b", BIGINT)),
                         LEFT,
                         TRUE,
-                        p.values(emptyList(), ImmutableList.of(emptyList()))))
+                        p.values(List.of(), ImmutableList.of(List.of()))))
                 .matches(values("b"));
 
         tester().assertThat(new RemoveUnreferencedScalarSubqueries())
                 .on(p -> p.correlatedJoin(
-                        emptyList(),
+                        List.of(),
                         p.values(p.symbol("b", BIGINT)),
                         RIGHT,
                         TRUE,
-                        p.values(emptyList(), ImmutableList.of(emptyList()))))
+                        p.values(List.of(), ImmutableList.of(List.of()))))
                 .matches(values("b"));
 
         tester().assertThat(new RemoveUnreferencedScalarSubqueries())
                 .on(p -> p.correlatedJoin(
-                        emptyList(),
+                        List.of(),
                         p.values(p.symbol("b", BIGINT)),
                         FULL,
                         TRUE,
-                        p.values(emptyList(), ImmutableList.of(emptyList()))))
+                        p.values(List.of(), ImmutableList.of(List.of()))))
                 .matches(values("b"));
     }
 
@@ -178,7 +179,7 @@ public class TestRemoveUnreferencedScalarSubqueries
     {
         tester().assertThat(new RemoveUnreferencedScalarSubqueries())
                 .on(p -> p.correlatedJoin(
-                        emptyList(),
+                        List.of(),
                         p.values(),
                         p.values()))
                 .doesNotFire();
