@@ -60,6 +60,6 @@ class TestVariantFunctions
     {
         String hexMetadata = VarbinaryFunctions.toHex(variant.metadata().toSlice()).toStringUtf8();
         String hexValue = VarbinaryFunctions.toHex(variant.data()).toStringUtf8();
-        return String.format("decode_variant(X'%s', X'%s')", hexMetadata, hexValue);
+        return "decode_variant(X'%s', X'%s')".formatted(hexMetadata, hexValue);
     }
 }
